if recipe.imageName DNE, show default image + fix image size to stretch

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -164,6 +164,7 @@ div.recipe {
 div.recipe img.foodimage {
     height: 100px;
     width: 100px;
+    size: cover;
 }
 
 img.favoriteIcon {
